# django-googletrans

./: .gitignore  README.md  pyproject.toml
DjangoRoot/: settings.py
scripts/: google_translator.py
