[tool.poetry]
name = "djnago-googletrans"
version = "0.1.0"
description = "a module could let you auto create django.po file"
authors = ["JackaL <shiveringbulbul@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
